# cslab

./: .gitignore  local_system.excalidraw  to_add_in_2.md
project/: flow.json  local_system.excalidraw  local_system_2.excalidraw  nfc.ino  nfc_ino_frtos.ino  to_add_in_2.md
project/mcu/: funct.S  header.h  mcu.ino  mcu_frtos.ino
project/nfc_ino_frtos/: nfc_ino_frtos.ino
project/rest_api/src/: main.rs
project/rest_api/src/api/: dispense_log.rs  user.rs
project/rest_api/src/model/: dispense_log.rs  mod.rs  user.rs
project/rest_api/src/repo/: mongo_db.rs
pt2/: local_system_conn.excalidraw  mcu.ino  nfc.ino  references.md  to_add_in_2.md
pt2/rest_api/: Cargo.toml
pt2/rest_api/src/: main.rs
pt2/rest_api/src/repo/: mongo_db.rs
ramde/: .project  SmartCoffeeCapsulesDispenser.notation  SmartCoffeeCapsulesDispenser.uml  readme.md
