[package]
name = "rest_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "^4"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
dotenv = "0.15.0"
derive_more="^0.99"
urlencoding="^2.1.3"
[dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["sync"] 
